# honest-healthcare

./: .gitignore  CLAUDE.md  DOCKER_PLAN.md  docker-compose.yml  research_emory.py
backend/: CLAUDE.md  database.py  main.py  models.py  requirements.txt
data/hospitals/: hospitals.json
deploy/: Dockerfile.backend  Dockerfile.etl  Dockerfile.frontend
etl/: CLAUDE.md  pyproject.toml
etl/anthem/: anthem_index_parser.py  anthem_rate_extractor.py
etl/bronze/: bronze_emory.py
etl/debug/: Untitled.ipynb  debug_gold_data.py
etl/eda/: inspect_tic.py
etl/gold/: gold_emory.py
etl/hospitals/: fetch_atlanta_hospitals.py
etl/scripts/: db_loader.py  update_ga_issuers.py
etl/silver/: silver_emory.py
etl/uhc/: index_parser.py
etl/utils/: logger.py
frontend/: CLAUDE.md  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
resources/: requirements.etl.txt
